delete comment DONE

--- a/src/views/blog/styles.css
+++ b/src/views/blog/styles.css
@@ -37,3 +37,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.commentAvatar{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
